--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,10 @@
-[pytest]
-addopts =
-    --junitxml=junit-results.xml
-    --cov-report=xml
-    --cov-report=html
-    --cov-report=term
-    --doctest-cython
+[flake8]
+max-complexity = 10
 
 [coverage:run]
+source = brainiak_extras
 branch = True
+parallel = True
 
 [coverage:report]
 fail_under = 90
