Added docs and type info for private functions

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ junit-*.xml
 src
 _build
 
+/htmlcov/
+/src/
+brainiak_extras/__pycache__/
+brainiak_extras/tda/__pycache__/
+tests/tda/__pycache__/
+var/
